# freshservice_mcp

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  copilot-examples.md  copilot-instructions.md  copilot-playbook.md  installed.txt  pyproject.toml  requirements-ci.txt
.github/workflows/: ci.yml
examples/: openclaw_demo.py
src/freshservice_mcp/: __init__.py  llm.py  openclaw.py  server.py
tests/: test-fs-mcp.py  test_openclaw.py  test_server.py
