[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "freshservice-mcp"
version = "0.1.0"
description = "A powerful MCP server implementation that seamlessly integrates with Freshservice"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["mcp", "freshservice", "itsm", "api", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    # upgrade MCP SDK to a non-vulnerable series
    "mcp>=1.23.0",
    "httpx==0.27.2",
    "python-dotenv==1.0.0",
    # loosen pydantic to be compatible with newer mcp SDK
    "pydantic>=2.11.0,<3.0.0",
]

[project.scripts]
freshservice-mcp = "freshservice_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest==7.3.2",
    "pytest-asyncio==0.21.0",
    "black>=24.3.0",
    "ruff==0.15.7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/freshservice_mcp"]

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
